<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">Main Menu</string>

    <string-array name="drawer_array">
        <item>Questions</item>
        <item>Leaderboard</item>
        <item>My Stats</item>
    </string-array>
    
        
     <array name="nav_drawer_icons">
        <item>@drawable/question</item>
        <item>@drawable/leader</item>
        <item>@drawable/star</item>
    </array>
    
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

	<!-- Drawer/Main Fragment -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <!-- Question Fragment -->
    <string name="question_text">Sorry, there are no more questions.</string>
    <string name="answer_one_text">1</string>
    <string name="answer_two_text">1000000</string>
    <string name="answer_three_text">40</string>
    <string name="answer_four_text">42</string>
    <string name="submit_answer_button_text">Submit</string>
    <string name="next_question_button_text">Next</string>
    <string name="question_image_desc"></string>
    <string name="hidden_value_text">Correct!</string>
    
    <!-- Stats Fragment -->
    <string name="experience_bar_title_text">Experience</string>
    <string name="achievement_title_text">Achievements</string>
    <string name="achievement_description_text">You foobar-ed better than any other.</string>
    <string name="achievement_name_text">Top Foobar-er!!!</string>   
    <string name="level_title_text">Level 0</string>
    
    <!-- JSON/Web Server Strings -->
    <string name="error_fetching_question">Couldn\'t contact the server</string>
    <string name="error_answering_question">Couldn\'t save your question</string>
    <string name="error_fetching_achievements">Couldn\'t fetch achievements</string>
    <string name="no_more_questions">No more questions to answer!</string>

	<!-- Achievement Dialog Fragment -->
	<string name="achievement_dialog_description_text">Answered 45 questions in under 2 seconds!</string>
	<string name="achievement_dialog_name_text">Fastest Answerer</string>
    

</resources>