<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

      <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        >
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center_horizontal"
        android:padding="64dp"
        android:contentDescription="@string/question_image_desc" />
	</LinearLayout>
	      <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        >
    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:textSize="30sp" />
	</LinearLayout>
    
          <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="4"
        >
    <RadioGroup
        android:id="@+id/answers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/answer_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <RadioButton
            android:id="@+id/answer_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <RadioButton
            android:id="@+id/answer_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <RadioButton
            android:id="@+id/answer_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_four_text" />
    </RadioGroup>
	</LinearLayout>
    
      <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/submit_answer_button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/submit_answer_button_text"
             />

    </LinearLayout>

</LinearLayout>